force-app/main/default/objects/Test_Engagement_Contacts__c/Test_Engagement_Contacts__c.object-meta.xml
<CustomObject>
    <description>An object to test the Salesforce Triggered Sends using the Marketing Cloud Connector. There will also be a trigger for this object.</description>
    <label>Test Engagement Contact</label>
    <nameField>
        <displayFormat>Test-EC-{0}</displayFormat>
        <label>Test Engagement Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Engagement Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>