force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the case the email message is related to.</description>
    <inlineHelpText>This is the case the email message is related to.</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Test Engagement Contacts</relationshipLabel>
    <relationshipName>Test_Engagement_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>