force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Thread_Id__c</fullName>
    <formula>IF( Test_Case__c = '' ,'', Test_Case__r.Thread_Id__c)</formula>
    <label>Test Case Thread Id</label>
    <type>Text</type>
</CustomField>