force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Contact__c.field-meta.xml
<CustomField>
    <fullName>Test_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the contact the message is related to or intended for.</description>
    <inlineHelpText>This is the contact the message is related to or intended for.</inlineHelpText>
    <label>Test Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Engagement Contacts</relationshipLabel>
    <relationshipName>Test_Engagement_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>