force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <description>Used to indicate if the messages has been sent through Marketing Cloud.</description>
    <inlineHelpText>Used to indicate if the messages has been sent through Marketing Cloud.</inlineHelpText>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>