force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Success_Resource__c.field-meta.xml
<CustomField>
    <fullName>Test_Success_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to associate the message with a success resource.</description>
    <inlineHelpText>Used to associate the message with a success resource.</inlineHelpText>
    <label>Test Success Resource</label>
    <referenceTo>Success_Resource__c</referenceTo>
    <relationshipLabel>Test Engagement Contacts</relationshipLabel>
    <relationshipName>Test_Engagement_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>