force-app/main/default/objects/Test_Engagement_Contacts__c/fields/Test_Success_Resource_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Test_Success_Resource_Primary_Email__c</fullName>
    <formula>Test_Success_Resource__r.Primary_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Success Resource Primary Email</label>
    <type>Text</type>
</CustomField>